Adding twitter widget

--- a/app/views/home/index.html.haml
+++ b/app/views/home/index.html.haml
@@ -9,19 +9,15 @@
             %li
               %a.btn.btn-primary.btn-lg
                 %span Read more and apply
-  .content-section-a
-    .container
-      .row
-        .col-lg-5.col-sm-6
-          %hr.section-heading-spacer/
-          .clearfix
-          %h2.section-heading
-            Death to the Stock Photo:
-            %br>/
-            Special Thanks
-          %p.lead
-            A special thanks to
-            %a{:href => "http://join.deathtothestockphoto.com/", :target => "_blank"} Death to the Stock Photo
-            for providing the photographs that you see in this template. Visit their website to become a member.
-        .col-lg-5.col-lg-offset-2.col-sm-6
-          %img.img-responsive{:alt => "", :src => "img/ipad.png"}/
+.content-section-a
+  .container
+    .row
+      .col-lg-4.col-sm-6
+        %h2.section-heading
+          Recent Activities 
+      .col-lg-4.col-sm-6
+        %h2.section-heading
+          Events
+      .col-lg-4.col-sm-6
+        %h2.section-heading
+          %a{class: "twitter-timeline", href: "https://twitter.com/ershus", data: {'widget-id' => "604951134738915328"}} Tweets by @ershus
