--- a/app/views/home/index.html.haml
+++ b/app/views/home/index.html.haml
@@ -13,11 +13,16 @@
   .container
     .row
       .col-lg-4.col-sm-6
-        %h2.section-heading
-          Recent Activities 
+        .panel.panel-default
+          .panel-heading
+            %h3.panel-title Recent activities 
+          .panel-body
+            Panel content
       .col-lg-4.col-sm-6
-        %h2.section-heading
-          Events
+        .panel.panel-default
+          .panel-heading
+            %h3.panel-title Events
+          .panel-body
+            Panel content
       .col-lg-4.col-sm-6
-        %h2.section-heading
-          %a{class: "twitter-timeline", href: "https://twitter.com/ershus", data: {'widget-id' => "604951134738915328"}} Tweets by @ershus
+        %a{class: "twitter-timeline", href: "https://twitter.com/ershus", data: {'widget-id' => "604951134738915328"}} Tweets by @ershus
