Fixing both the panels in home page

--- a/app/views/home/index.html.haml
+++ b/app/views/home/index.html.haml
@@ -21,10 +21,21 @@
               .media
                 .media-left
                   %a{:href => "#"}
+                    %img.media-object.pull-left{:alt => "...", :src => "http://www.netbsd.org/images/NetBSD.png", hieght: "64px", width: "64px"}/
+                .media-body.recent-activity
+                  %h4.media-heading One day workshop on NetBSD 
+                  %p Donec sollicitudin molestie malesuada. Quisque velit nisi, pretium ut lacinia in, elementum id eni.
+
+            .activity-info
+              .media
+                .media-left
+                  %a{:href => "#"}
                     %img.media-object.pull-left{:alt => "...", :src => "http://hd.wallpaperswide.com/thumbs/android_logo-t2.jpg", hieght: "64px", width: "64px"}/
                 .media-body.recent-activity
                   %h4.media-heading Built Android environment based on BSD
                   %p Donec sollicitudin molestie malesuada. Quisque velit nisi, pretium ut lacinia in, elementum id eni.
+
+
 
 
       .col-lg-4.col-sm-6
@@ -32,19 +43,34 @@
           .panel-heading
             %h3.panel-title Events
           .panel-body
-            .activity-info
+            .event-info
               .media
                 .media-left.pull-left
                   .date
                     %p
                       25
                       %span May 2015
-                .media-body.recent-activity
+                .media-body.recent-event
                   %h4.media-heading HackBeach
                   %h5
                     25 May 2015 - 4 July 2015
                     %br
                     Kovalam, Trivandrum
+
+            .event-info
+              .media
+                .media-left.pull-left
+                  .date
+                    %p
+                      2
+                      %span Dec 2015
+                .media-body.recent-event
+                  %h4.media-heading Kernel Programming workshop
+                  %h5
+                    25 May 2015 - 4 July 2015
+                    %br
+                    Kovalam, Trivandrum
+
 
 
 
