--- a/app/views/layouts/_footer.html.haml
+++ b/app/views/layouts/_footer.html.haml
@@ -2,20 +2,20 @@
   .container
     .row
       .col-lg-10
-        %ul.list-inline.footer-links
+        %ul.list-inline.footer-links.pull-left
           %li
-            %a{href: "#home"} Home
-          %li.footer-menu-divider ⋅
+            %h5
+              %a{href: "#home"} Home
+          %li.footer-menu-divider 
           %li
-            %a{href: "#about"} About
-          %li.footer-menu-divider ⋅
+            %h5
+              %a{href: "#about"} Press
+          %li.footer-menu-divider 
           %li
-            %a{href: "#services"} Services
-          %li.footer-menu-divider ⋅
+            %h5
+              %a{href: "#services"} About
+          %li.footer-menu-divider 
           %li
-            %a{href: "#contact"} Contact
-      .col-lg-2
-        %p.copyright.text-muted.small
-          Made with
-          %i.fa.fa-heart
-          in India
+            %h5
+              %a{href: "#contact"} Contact
+
