--- a/app/views/activities/_form.html.haml
+++ b/app/views/activities/_form.html.haml
@@ -1,19 +1,8 @@
-= form_for @activity do |f|
-  - if @activity.errors.any?
-    #error_explanation
-      %h2= "#{pluralize(@activity.errors.count, "error")} prohibited this activity from being saved:"
-      %ul
-        - @activity.errors.full_messages.each do |msg|
-          %li= msg
+= simple_form_for(@activity, html: { class: 'form-horizontal' }) do |f|
+  = f.input :title, wrapper_html: { style: 'margin: 0' }
+  %br
+  = f.label :description
+  = f.cktext_area :description
 
-  .field
-    = f.label :title
-    = f.text_field :title
-  .field
-    = f.label :description
-    = f.text_area :description
-  .field
-    = f.label :user_id
-    = f.number_field :user_id
-  .actions
-    = f.submit 'Save'
+  %br
+  = f.button :submit
