--- a/app/views/activities/index.html.haml
+++ b/app/views/activities/index.html.haml
@@ -1,23 +1,18 @@
-%h1 Listing activities
+.container
+  .row
+    .col-lg-12
+      %h1 Activities
+      %hr
 
-%table
-  %tr
-    %th Title
-    %th Description
-    %th User
-    %th
-    %th
-    %th
+      - @activities.each do |activity|
+        .activity
+          = link_to activity, class: 'title-link' do
+            %h2= activity.title
+          %em
+            Posted by
+            = activity.user.name
+            on
+            = activity.created_at.strftime('%e %b %Y')
+          %p= truncate_html activity.description.html_safe, length: 1200, omission: (link_to '.. read more', activity)
+          %hr
 
-  - @activities.each do |activity|
-    %tr
-      %td= activity.title
-      %td= activity.description
-      %td= activity.user_id
-      %td= link_to 'Show', activity
-      %td= link_to 'Edit', edit_activity_path(activity)
-      %td= link_to 'Destroy', activity, :method => :delete, :data => { :confirm => 'Are you sure?' }
-
-%br
-
-= link_to 'New Activity', new_activity_path
