--- a/app/views/activities/new.html.haml
+++ b/app/views/activities/new.html.haml
@@ -1,5 +1,5 @@
-%h1 New activity
-
-= render 'form'
-
-= link_to 'Back', activities_path
+.container
+  %h1 Add Activity
+  .row
+    .col-lg-8
+      = render 'form'
