--- a/app/views/activities/show.html.haml
+++ b/app/views/activities/show.html.haml
@@ -1,15 +1,10 @@
-%p#notice= notice
-
-%p
-  %b Title:
-  = @activity.title
-%p
-  %b Description:
-  = @activity.description
-%p
-  %b User:
-  = @activity.user_id
-
-= link_to 'Edit', edit_activity_path(@activity)
-\|
-= link_to 'Back', activities_path
+.container
+  .row
+    .col-lg-12
+      %h2= @activity.title
+      %em
+        Posted by
+        = @activity.user.name
+        on
+        = @activity.created_at.strftime('%e %b %Y')
+      %p= @activity.description.html_safe
