Cleaning up activities page

--- a/app/views/activities/_form.html.haml
+++ b/app/views/activities/_form.html.haml
@@ -5,4 +5,5 @@
   = f.cktext_area :description
 
   %br
-  = f.button :submit
+  = f.button :submit, class: 'btn btn-success'
+  = link_to 'Cancel', activities_path, class: 'btn btn-default'
