--- a/app/views/activities/show.html.haml
+++ b/app/views/activities/show.html.haml
@@ -2,9 +2,16 @@
   .row
     .col-lg-12
       %h2= @activity.title
-      %em
-        Posted by
-        = @activity.user.name
-        on
-        = @activity.created_at.strftime('%e %b %Y')
+      %ul.list-inline
+        - if @activity.user == current_user
+          %li= link_to 'edit', edit_activity_path(@activity)
+          |
+          %li= link_to 'delete', @activity, :method => :delete, :data => { :confirm => 'Are you sure?' }
+        %li
+          %em
+            Posted by
+            = @activity.user.name
+            on
+            = @activity.created_at.strftime('%e %b %Y')
+
       %p= @activity.description.html_safe
