--- a/app/views/activities/edit.html.haml
+++ b/app/views/activities/edit.html.haml
@@ -1,7 +1,5 @@
-%h1 Editing activity
-
-= render 'form'
-
-= link_to 'Show', @activity
-\|
-= link_to 'Back', activities_path
+.container
+  %h1 Edit Activity
+  .row
+    .col-lg-8
+      = render 'form'
