--- a/app/views/activities/show.html.haml
+++ b/app/views/activities/show.html.haml
@@ -15,3 +15,10 @@
             = @activity.created_at.strftime('%e %b %Y')
 
       %p= @activity.description.html_safe
+
+    %br
+    #disqus_thread
+
+%noscript
+  Please enable JavaScript to view the
+  %a{:href => "https://disqus.com/?ref_noscript", :rel => "nofollow"} comments
