--- a/app/views/layouts/_navbar.html.haml
+++ b/app/views/layouts/_navbar.html.haml
@@ -17,7 +17,7 @@
         %li
           %a{href: "#"} Participants
         %li
-          %a{href: "#"} Events
+          = link_to 'Events', events_path
         %li
           %a{href: '#'} FAQ
         %li
