--- a/app/views/activities/index.html.haml
+++ b/app/views/activities/index.html.haml
@@ -1,12 +1,13 @@
 .container
   .row
     .col-lg-12
-      .pull-left
-        %h1 Activities
-      .pull-right.new-activity-button
-        = link_to 'New activity', new_activity_path, class: 'btn btn-primary btn-lg'
-      .clearfix
-      %hr
+      .main-heading
+        .pull-left
+          %h2 Activities
+        .pull-right.new-button
+          = link_to 'New activity', new_activity_path, class: 'btn btn-primary btn-lg'
+        .clearfix
+      %hr.dotted
       - @activities.each do |activity|
         .activity
           = link_to activity, class: 'title-link' do
