--- a/app/views/events/new.html.haml
+++ b/app/views/events/new.html.haml
@@ -1,5 +1,5 @@
-%h1 New event
-
-= render 'form'
-
-= link_to 'Back', events_path
+.container
+  %h1 Add Event
+  .row
+    .col-lg-8
+      = render 'form'
