--- a/app/views/activities/index.html.haml
+++ b/app/views/activities/index.html.haml
@@ -1,28 +1,25 @@
 .container
   .row
-    .col-lg-12
+    .col-md-8.col-md-offset-2
       .main-heading
-        .pull-left
-          %h2 Activities
         .pull-right.new-button
-          = link_to 'New activity', new_activity_path, class: 'btn btn-primary btn-lg'
+          = link_to 'New activity', new_activity_path, class: 'btn btn-default'
         .clearfix
-      %hr.dotted
       - @activities.each do |activity|
         .activity
           = link_to activity, class: 'title-link' do
             %p.heading= activity.title
-            %ul.list-inline
-              - if activity.user == current_user
-                %li= link_to 'edit', edit_activity_path(activity)
-                |
-                %li= link_to 'delete', activity, :method => :delete, :data => { :confirm => 'Are you sure?' }
-              %li
-                %em
-                  Posted by
-                  = activity.user.name
-                  on
-                  = activity.created_at.strftime('%e %b %Y')
+          %ul.list-inline.author-info
+            %li
+              %em
+                = activity.user.name
+                on
+                = activity.created_at.strftime('%e %b')
+            - if activity.user == current_user
+              %li= link_to 'edit', edit_activity_path(activity)
+              |
+              %li= link_to 'delete', activity, :method => :delete, :data => { :confirm => 'Are you sure?' }
+          %br
           %p= truncate_html activity.description.html_safe, length: 1200, omission: (link_to '.. read more', activity)
           .clearfix
           %hr
