--- a/app/views/events/index.html.haml
+++ b/app/views/events/index.html.haml
@@ -2,12 +2,9 @@
   .row
     .col-lg-12
       .main-heading
-        .pull-left
-          %h2 Events
         .pull-right.new-button
-          = link_to 'New event', new_event_path, class: 'btn btn-primary btn-lg'
+          = link_to 'New event', new_event_path, class: 'btn btn-default'
         .clearfix
-      %hr.dotted
       %br
 
       - @events.each do |event|
