Added FAQ and twitter widget

--- a/app/views/home/index.html.haml
+++ b/app/views/home/index.html.haml
@@ -17,4 +17,4 @@
       = render 'recent_events'
 
       .col-lg-4.col-sm-6
-        %a{class: "twitter-timeline", href: "https://twitter.com/ershus", data: {'widget-id' => "604951134738915328"}} Tweets by @ershus
+        %a{class: "twitter-timeline", href: "https://twitter.com/kekorgin", data: {'widget-id' => "633865879634100224"}} Tweets by @kekorgin
