--- a/app/views/layouts/_navbar.html.haml
+++ b/app/views/layouts/_navbar.html.haml
@@ -14,15 +14,15 @@
       %ul.nav.navbar-nav.navbar-right
         %li
           = link_to "News", activities_path, class: set_active_class(activities_path)
-        %li
-          %a{href: "#"} People
+        / %li
+        /   %a{href: "#"} People
         %li
           = link_to 'Events', events_path, class: set_active_class(events_path)
         %li
           %a{href: faq_path } FAQ
         %li
           %a{href: '#'} Contact
-        %li
-          %a{href: '#'} About
-        %li
-          %a{href: '#'} Login
+        / %li
+        /   %a{href: '#'} About
+        / %li
+        /   %a{href: '#'} Login
