Added contact and about path

--- a/app/views/layouts/_navbar.html.haml
+++ b/app/views/layouts/_navbar.html.haml
@@ -21,8 +21,8 @@
         %li
           %a{href: faq_path } FAQ
         %li
-          %a{href: '#'} Contact
-        / %li
-        /   %a{href: '#'} About
+          %a{href: contact_path } Contact
+        %li
+          %a{href: about_path } About
         / %li
         /   %a{href: '#'} Login
