Updating main text

--- a/app/views/home/index.html.haml
+++ b/app/views/home/index.html.haml
@@ -3,11 +3,12 @@
     .row
       .col-lg-12
         .intro-message
-          %h2 Local tech for local problems
+          %h2 കോവളം എഴുത്തു കളരി
+          %h2 Kovalam Ezhuthu Kalari
           %hr.intro-divider/
           %ul.list-inline
             %li
-              = link_to faq_path, class: 'btn btn-primary btn-lg' do
+              = link_to about_path, class: 'btn btn-primary btn-lg' do
                 %span
                   Read more
 
