--- a/app/views/contact/index.html.haml
+++ b/app/views/contact/index.html.haml
@@ -7,3 +7,9 @@
         %p
           Email us at
           = link_to 'mail@kek.org.in', 'mailto:mail@kek.org.in'
+
+        %h3 Map
+        %iframe{:frameborder => "0", :height => "350", :marginheight => "0", :marginwidth => "0", :scrolling => "no", :src => "http://www.openstreetmap.org/export/embed.html?bbox=76.96433544158936%2C8.415637679573162%2C76.97888374328613%2C8.42934983646258&layer=mapnik&marker=8.422493818755951%2C76.97160959243774", :style => "border: 1px solid black", :width => "425"}
+        %br/
+        %small
+          %a{:href => "http://www.openstreetmap.org/?mlat=8.4225&mlon=76.9716#map=16/8.4225/76.9716"} View Larger Map
