Fixing date widget

--- a/app/views/events/index.html.haml
+++ b/app/views/events/index.html.haml
@@ -11,7 +11,7 @@
         .event
           .row
             .col-lg-1
-              %i.fa.fa-calendar-o{ style: 'font-size: 80px' }
+              %i.fa.fa-calendar.calendar-icon{ style: 'font-size: 80px' }
             .col-lg-11
               %p.heading= event.title
               - if event.user == current_user
