--- a/app/views/activities/index.html.haml
+++ b/app/views/activities/index.html.haml
@@ -2,8 +2,9 @@
   .row
     .col-md-8.col-md-offset-2
       .main-heading
-        .pull-right.new-button
-          = link_to 'New activity', new_activity_path, class: 'btn btn-default'
+        - if user_signed_in?
+          .pull-right.new-button
+            = link_to 'New activity', new_activity_path, class: 'btn btn-default'
         .clearfix
       - @activities.each do |activity|
         .activity
