--- a/app/views/layouts/_navbar.html.haml
+++ b/app/views/layouts/_navbar.html.haml
@@ -24,5 +24,10 @@
           = link_to 'Contact', contact_path, class: set_active_class(contact_path)
         %li
           = link_to 'About', about_path, class: set_active_class(about_path)
-        %li
-          = link_to 'Login', new_user_session_path, class: set_active_class(new_user_session_path)
+
+        - if user_signed_in?
+          %li
+            = link_to 'Log out', destroy_user_session_path, method: :delete
+        - else
+          %li
+            = link_to 'Login', new_user_session_path, class: set_active_class(new_user_session_path)
