--- a/app/views/events/index.html.haml
+++ b/app/views/events/index.html.haml
@@ -6,6 +6,7 @@
           .pull-right.new-button
             = link_to 'New event', new_event_path, class: 'btn btn-default'
         .clearfix
+      %h2 Events
       %br
 
       - @events.each do |event|
