--- a/app/views/layouts/_navbar.html.haml
+++ b/app/views/layouts/_navbar.html.haml
@@ -28,6 +28,6 @@
         - if user_signed_in?
           %li
             = link_to 'Log out', destroy_user_session_path, method: :delete
-        - else
-          %li
-            = link_to 'Login', new_user_session_path, class: set_active_class(new_user_session_path)
+        / - else
+        /   %li
+        /     = link_to 'Login', new_user_session_path, class: set_active_class(new_user_session_path)
