Renaming activity to story

--- a/app/views/events/_form.html.haml
+++ b/app/views/events/_form.html.haml
@@ -9,4 +9,4 @@
 
   %br
   = f.button :submit, class: 'btn btn-success'
-  = link_to 'Cancel', activities_path, class: 'btn btn-default'
+  = link_to 'Cancel', stories_path, class: 'btn btn-default'
