--- a/app/views/home/index.html.haml
+++ b/app/views/home/index.html.haml
@@ -15,7 +15,7 @@
 .content-section-a
   .container
     .row
-      = render 'recent_activities'
+      = render 'recent_stories'
       = render 'recent_events'
 
       .col-lg-4.col-sm-6
