--- a/app/assets/stylesheets/stories.css.scss
+++ b/app/assets/stylesheets/stories.css.scss
@@ -1,9 +1,9 @@
-// Place all the styles related to the Activities controller here.
+// Place all the styles related to the Stories controller here.
 // They will automatically be included in application.css.
 // You can use Sass (SCSS) here: http://sass-lang.com/
 
 
-.activity {
+.story {
   .heading {
       text-align: center;
       color: #333;
