--- a/app/views/layouts/_navbar.html.haml
+++ b/app/views/layouts/_navbar.html.haml
@@ -13,7 +13,7 @@
     #bs-example-navbar-collapse-1.collapse.navbar-collapse
       %ul.nav.navbar-nav.navbar-right
         %li
-          = link_to "Stories", activities_path, class: set_active_class(activities_path)
+          = link_to "Stories", stories_path, class: set_active_class(stories_path)
         / %li
         /   %a{href: "#"} People
         %li
