--- a/app/views/stories/_form.html.haml
+++ b/app/views/stories/_form.html.haml
@@ -1,4 +1,4 @@
-= simple_form_for(@activity, html: { class: 'form-horizontal' }) do |f|
+= simple_form_for(@story, html: { class: 'form-horizontal' }) do |f|
   = f.input :title, wrapper_html: { style: 'margin: 0' }
   %br
   = f.label :description
@@ -6,4 +6,4 @@
 
   %br
   = f.button :submit, class: 'btn btn-success'
-  = link_to 'Cancel', activities_path, class: 'btn btn-default'
+  = link_to 'Cancel', stories_path, class: 'btn btn-default'
