Adding Cherry's patches

--- a/app/views/about/index.html.haml
+++ b/app/views/about/index.html.haml
@@ -2,7 +2,7 @@
   .row
     .col-lg-12
       .main-heading
-        %h1 Contact
+        %h1 About
 
         %p
           Kovalam Ezhuthu Kalari is inspired from the old "Ezhuthu Kalari"
