--- a/app/views/faq/index.html.haml
+++ b/app/views/faq/index.html.haml
@@ -29,8 +29,13 @@
           after working hours (4pm). You'll bump into one of the current
           residents.
         %p OR, if you're far away,
-        %p Make an application via this form: (Google Form Link)
-
+        %p
+          Email us at
+          = link_to 'mail@kek.org.in', 'mailto:mail@kek.org.in'
+        %p OR
+        %p
+          Follow us on twitter at
+          = link_to 'twitter.com/kekorgin', 'https://twitter.com/kekorgin'
         %h4 What about the copyright to my work ?
         Your work is yours - we don't want to hold on to anything you work
         on. We do however ask that you post weekly on our community blog, so
