--- a/app/views/devise/registrations/new.html.haml
+++ b/app/views/devise/registrations/new.html.haml
@@ -6,6 +6,7 @@
         %br
 
       = simple_form_for(resource, as: resource_name, url: registration_path(resource_name), html: { class: 'form-horizontal' }) do |f|
+        = f.input :name
         = f.input :email
         = f.input :password
         = f.input :password_confirmation
