Updating FAQ with Cherry's diff

--- a/app/views/faq/index.html.haml
+++ b/app/views/faq/index.html.haml
@@ -51,14 +51,55 @@
 
         %h4 How much does it cost ?
         %p
-          Residencies are currently 8000Rs/month + food. This gives you access to
-          a bedroom with a bathroom attached as well as all the other facilities
-          on the property.
+          Residencies are funded through a gift economy. Currently
+          Rs. 8000/month is a useful reference figure.  If you can
+          afford more, it will help defray the cost of other residents
+          who can't afford this now. And if you can't afford to pay this
+          much, please email us, we can talk about other ways you can
+          contribute, outside of money - for eg: you could work extra
+          in the vegetable garden, help us build useful things,
+          fix things that are broken, or cook meals etc.
+
+        %p
+          You will have access to a bedroom with a bathroom attached,
+          fast internet, a functional kitchen, and any other common
+          facilities on the property.
+
         %p Shorter stays are possible, but please get in touch with us first.
+
+        %h4 What kind of food will I get ?
+        %p
+          Kerala has a range of tasty and novel cuisine.
+          However, we provide simple vegetarian meals.
+
+          If you want to sample other options, there are a number of
+          restaurants and bars in vicinity, especially closer to the
+          beach.
+
+          If you want to cook your own, the kitchen is available for
+          this.
+
+          We are an alcohol free space (see below).
+
+        %h4 What kind of etiquette should I be mindful of ?
+        %p
+          Since we're an educational space, and working amongst
+          vulnerable young people and communities, we have to be very
+          mindful of our behaviour, both in and out of the space.
+
+          In general, the guiding principle is to be excellent towards
+          each other. This means, for example, using the designated
+          areas for smoking, making sure the space is clean, putting
+          things in order if you find them messy (eg: doing the dishes
+          if you find the sink has some), using civil language, wearing
+          locally acceptable clothing, etc.
 
         %h4 What else can I do in the area ?
         %p
-          We're within 4km of the ocean and beach - which means you can easily
+          We're within 2km of the ocean and beach - which means you can easily
           find your way to the beach. We work closely with the Kovalam Surf club
           and the Kovalam Skate club. We also work very closely with a local
-          charity (http://www.sisp.in) in their local social charible efforts.
+          charity (
+          = link_to 'www.sisp.in', 'http://www.sisp.in'
+          ) in their local social charitable efforts.
+
