Updating email address

--- a/app/views/faq/index.html.haml
+++ b/app/views/faq/index.html.haml
@@ -31,7 +31,7 @@
         %p OR, if you're far away,
         %p
           Email us at
-          = link_to 'mail@kek.org.in', 'mailto:mail@kek.org.in'
+          = link_to 'hello@kek.org.in', 'mailto:hello@kek.org.in'
         %p OR
         %p
           Follow us on twitter at
