--- a/app/views/faq/index.html.haml
+++ b/app/views/faq/index.html.haml
@@ -11,7 +11,7 @@
 
         %h4 Who ?
         %p
-          Are you a Hacker (someone who likes playing with Tech ) ? Do you want to
+          Are you a Hacker? Do you want to
           work on your own terms out of the buzz and smog of the city in a quiet
           place in an area of natural beauty ? Do you want to work on grassroots
           projects which impact the lives of local people around you ? Then that's
