--- a/app/assets/stylesheets/application.css.scss
+++ b/app/assets/stylesheets/application.css.scss
@@ -17,15 +17,33 @@
  *= require_self
  */
 
-body { padding-top: 50px; }
+html {
+  position: relative;
+  min-height: 100%;
+}
+
+body {
+  padding-top: 50px;
+  margin-bottom: 30px;
+}
+
+.footer {
+  position: absolute;
+  bottom: 0;
+  width: 100%;
+  height: 30px;
+  background-color: white;
+  padding: 14px 0;
+}
+
+.footer-content {
+  border-top: 2px solid #eee;
+  padding-top: 10px;
+}
 
 p, li {
   font-family: Georgia,Times,"Times New Roman",serif;
   font-size: 15px;
-}
-
-footer {
-  background-color: #eee
 }
 
 a.title-link:hover {
@@ -35,7 +53,6 @@ a.title-link:hover {
 .new-button {
   padding-top: 15px;
 }
-
 
 p, em, a {
   font-family: "Benton Sans","Helvetica Neue",Helvetica,Roboto,Arial,sans-serif;
