Adding no events text

--- a/app/views/events/index.html.haml
+++ b/app/views/events/index.html.haml
@@ -9,6 +9,9 @@
       .clearfix
       %br
 
+      - if @events.empty?
+        %p Bummer! No events to dislay. Check out later? :-)
+
       - @events.each do |event|
         .event
           .row
