Quickly fixing CSS of about page

--- a/app/views/about/index.html.haml
+++ b/app/views/about/index.html.haml
@@ -1,8 +1,8 @@
 .container
   .row
-    .col-lg-12
-      .main-heading
-        %h1 About
+    .col-md-8.col-md-offset-2
+      .story.show-page
+        %p.heading About
 
         %p
           Kovalam Ezhuthu Kalari is inspired from the old "Ezhuthu Kalari"
