--- a/app/views/layouts/_navbar.html.haml
+++ b/app/views/layouts/_navbar.html.haml
@@ -26,6 +26,9 @@
           = link_to 'About', about_path, class: set_active_class(about_path)
 
         - if user_signed_in?
+          - if current_user.role == 'admin'
+            %li
+              = link_to 'Approve users', approve_users_path
           %li
             = link_to 'Log out', destroy_user_session_path, method: :delete
         / - else
