--- a/app/views/devise/registrations/new.html.haml
+++ b/app/views/devise/registrations/new.html.haml
@@ -2,7 +2,7 @@
   .row
     .col-md-3.col-md-offset-4
       .main-heading
-        %h1 Sign up
+        %h1 Sign Up
         %br
 
       = simple_form_for(resource, as: resource_name, url: registration_path(resource_name), html: { class: 'form-horizontal' }) do |f|
