Updating contact page

--- a/app/views/contact/index.html.haml
+++ b/app/views/contact/index.html.haml
@@ -13,3 +13,24 @@
         %br/
         %small
           %a{:href => "http://www.openstreetmap.org/?mlat=8.4225&mlon=76.9716#map=16/8.4225/76.9716"} View Larger Map
+
+        %br
+        %br
+
+        %p
+          To reach KEK by bus from the city, one needs to board a south bound bus with any of the following destination boards:
+
+        %p
+          \- Peringamala via agricultural/karshika college
+        %p
+          \- Neyyattinkara
+        %p
+          \- Vizhinjam via Venganoor
+
+        %br
+        %p
+          Your destination is west poonkulam and a landmark to ask for is the CGO Complex.
+
+        %br
+        %p
+          At west poonkulam, also known as 'padinjarea poonkulam' ask for 'Varyam' house. It is a 100m walk from the bus stop.
